feat: main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,5 @@
-@use './color/pallete.scss' as *;
+@import './color/palette.scss';
+@import './effect/effect.scss';
+@import './shape/shape.scss';
+@import './typography/typography.scss';
+@import './mixin.scss';
