--- a/src/styles/shape/shape.scss
+++ b/src/styles/shape/shape.scss
@@ -1,7 +1,7 @@
-$Shape: (
-    extra-large: 20px,
-    large: 16px,
-    medium: 14px,
-    small: 12px,
-    extra-small: 10px
-);
+:root {
+    --extra-large: 20px;
+    --large: 16px;
+    --medium: 14px;
+    --small: 12px;
+    --extra-small: 10px;
+  }
