--- a/src/styles/color/palette.scss
+++ b/src/styles/color/palette.scss
@@ -1,99 +1,101 @@
-// Common
-$Common-00: #FFFFFF;
-$Common-100: #000000;
-
-// Netural
-$Netural-99: #FCFCFD;
-$Netural-97: #F6F6F7;
-$Netural-95: #F2F2F3;
-$Netural-90: #E4E4E5;
-$Netural-80: #C8C8CC;
-$Netural-70: #ACACB2;
-$Netural-60: #919199;
-$Netural-50: #767680;
-$Netural-40: #5E5E66;
-$Netural-30: #47474D;
-$Netural-25: #3B3B40;
-$Netural-20: #313135;
-$Netural-15: #252528;
-$Netural-10: #19191B;
-$Netural-7: #111113;
-$Netural-5: #0C0C0D;
-
-// Red
-$Red-99: #FEFBFB;
-$Red-95: #FCE9E9;
-$Red-90: #F9D2D2;
-$Red-80: #F2A6A6;
-$Red-70: #FF6666;
-$Red-60: #EB4747;
-$Red-50: #EE2B2B;
-$Red-40: #BD0F0F;
-$Red-30: #8E0B0B;
-$Red-20: #5E0808;
-$Red-10: #2F0404;
-
-// Orange
-$Orange-99: #FFFDFA;
-$Orange-95: #FEF5E6;
-$Orange-90: #FEEACD;
-$Orange-80: #FCD69C;
-$Orange-70: #FBC16A;
-$Orange-60: #FAAC38;
-$Orange-50: #F99806;
-$Orange-40: #C77905;
-$Orange-30: #955B04;
-$Orange-20: #633D03;
-$Orange-10: #321E01;
-
-// Green
-$Green-99: #FBFEFB;
-$Green-95: #E8FCEA;
-$Green-90: #D2F9D6;
-$Green-80: #A6F2AD;
-$Green-70: #79EC85;
-$Green-60: #4DE55C;
-$Green-50: #20DF33;
-$Green-40: #0FBD21;
-$Green-30: #0B8E18;
-$Green-20: #085E10;
-$Green-10: #042F08;
-
-// Blue
-$Blue-99: #FAFDFF;
-$Blue-95: #E5F3FF;
-$Blue-90: #CCE8FF;
-$Blue-80: #99D1FF;
-$Blue-70: #66B9FF;
-$Blue-60: #33A2FF;
-$Blue-50: #008BFF;
-$Blue-40: #006FCC;
-$Blue-30: #005399;
-$Blue-20: #003866;
-$Blue-10: #001C33;
-
-// Yellow
-$Yellow-99: #FFFEFA;
-$Yellow-95: #FFFAE5;
-$Yellow-90: #FFF5CC;
-$Yellow-80: #FFEB99;
-$Yellow-70: #FFE066;
-$Yellow-60: #FFD633;
-$Yellow-50: #FFCC00;
-$Yellow-40: #CCA300;
-$Yellow-30: #997A00;
-$Yellow-20: #665200;
-$Yellow-10: #332900;
-
-// Purple
-$Purple-99: #FCFAFF;
-$Purple-95: #F1E6FE;
-$Purple-90: #E3CDFE;
-$Purple-80: #C79CFC;
-$Purple-70: #AB6AFB;
-$Purple-60: #8F38FA;
-$Purple-50: #7306F9;
-$Purple-40: #5C05C7;
-$Purple-30: #450495;
-$Purple-20: #2E0363;
-$Purple-10: #170132;
+:root {
+    // Common
+    --Common-00: #FFFFFF;
+    --Common-100: #000000;
+  
+    // Netural
+    --Netural-99: #FCFCFD;
+    --Netural-97: #F6F6F7;
+    --Netural-95: #F2F2F3;
+    --Netural-90: #E4E4E5;
+    --Netural-80: #C8C8CC;
+    --Netural-70: #ACACB2;
+    --Netural-60: #919199;
+    --Netural-50: #767680;
+    --Netural-40: #5E5E66;
+    --Netural-30: #47474D;
+    --Netural-25: #3B3B40;
+    --Netural-20: #313135;
+    --Netural-15: #252528;
+    --Netural-10: #19191B;
+    --Netural-7: #111113;
+    --Netural-5: #0C0C0D;
+  
+    // Red
+    --Red-99: #FEFBFB;
+    --Red-95: #FCE9E9;
+    --Red-90: #F9D2D2;
+    --Red-80: #F2A6A6;
+    --Red-70: #FF6666;
+    --Red-60: #EB4747;
+    --Red-50: #EE2B2B;
+    --Red-40: #BD0F0F;
+    --Red-30: #8E0B0B;
+    --Red-20: #5E0808;
+    --Red-10: #2F0404;
+  
+    // Orange
+    --Orange-99: #FFFDFA;
+    --Orange-95: #FEF5E6;
+    --Orange-90: #FEEACD;
+    --Orange-80: #FCD69C;
+    --Orange-70: #FBC16A;
+    --Orange-60: #FAAC38;
+    --Orange-50: #F99806;
+    --Orange-40: #C77905;
+    --Orange-30: #955B04;
+    --Orange-20: #633D03;
+    --Orange-10: #321E01;
+  
+    // Green
+    --Green-99: #FBFEFB;
+    --Green-95: #E8FCEA;
+    --Green-90: #D2F9D6;
+    --Green-80: #A6F2AD;
+    --Green-70: #79EC85;
+    --Green-60: #4DE55C;
+    --Green-50: #20DF33;
+    --Green-40: #0FBD21;
+    --Green-30: #0B8E18;
+    --Green-20: #085E10;
+    --Green-10: #042F08;
+  
+    // Blue
+    --Blue-99: #FAFDFF;
+    --Blue-95: #E5F3FF;
+    --Blue-90: #CCE8FF;
+    --Blue-80: #99D1FF;
+    --Blue-70: #66B9FF;
+    --Blue-60: #33A2FF;
+    --Blue-50: #008BFF;
+    --Blue-40: #006FCC;
+    --Blue-30: #005399;
+    --Blue-20: #003866;
+    --Blue-10: #001C33;
+  
+    // Yellow
+    --Yellow-99: #FFFEFA;
+    --Yellow-95: #FFFAE5;
+    --Yellow-90: #FFF5CC;
+    --Yellow-80: #FFEB99;
+    --Yellow-70: #FFE066;
+    --Yellow-60: #FFD633;
+    --Yellow-50: #FFCC00;
+    --Yellow-40: #CCA300;
+    --Yellow-30: #997A00;
+    --Yellow-20: #665200;
+    --Yellow-10: #332900;
+  
+    // Purple
+    --Purple-99: #FCFAFF;
+    --Purple-95: #F1E6FE;
+    --Purple-90: #E3CDFE;
+    --Purple-80: #C79CFC;
+    --Purple-70: #AB6AFB;
+    --Purple-60: #8F38FA;
+    --Purple-50: #7306F9;
+    --Purple-40: #5C05C7;
+    --Purple-30: #450495;
+    --Purple-20: #2E0363;
+    --Purple-10: #170132;
+  }
