--- a/src/styles/color/semantic.scss
+++ b/src/styles/color/semantic.scss
@@ -1,40 +1,42 @@
 @use './palette.scss' as *;
 
-// Primary Color Palette
-$Primary-Normal: $Blue-20;
-$Primary-Alternate: #385C7A;
-$Primary-Assistive: #61778A;
-
-// Secondary Color Palette
-$Secondary-Normal: #BFC1C1;
-$Secondary-Alternate: #D1D4D5;
-$Secondary-Assistive: #ECF0F1;
-
-// Label Color Palette
-$Label-Normal: $Neutral-5;
-$Label-Strong: $Common-100;
-$Label-Neutral: $Neutral-25;
-$Label-Alternate: $Neutral-40;
-$Label-Assistive: $Neutral-50;
-$Label-Disabled: $Neutral-97;
-
-// Line Color Palette
-$Line-Normal: $Neutral-90;
-$Line-Neutral: $Neutral-95;
-$Line-Alternate: $Neutral-97;
-
-// Fill Color Palette
-$Fill-Assistive: $Common-00;
-$Fill-Support: $Common-00;
-$Fill-Normal: $Neutral-97;
-$Fill-Neutral: $Neutral-95;
-$Fill-Alternate: $Neutral-90;
-
-// Normal Color Palette
-$Normal-Normal: $Common-00;
-$Normal-Alternate: $Neutral-99;
-$Normal-Neutral: $Neutral-95;
-
-// Static Colors
-$Static-Black: $Common-100;
-$Static-White: $Common-00;
+:root {
+    // Primary Color Palette
+    --Primary-Normal: var(--Blue-20);
+    --Primary-Alternate: #385C7A;
+    --Primary-Assistive: #61778A;
+  
+    // Secondary Color Palette
+    --Secondary-Normal: #BFC1C1;
+    --Secondary-Alternate: #D1D4D5;
+    --Secondary-Assistive: #ECF0F1;
+  
+    // Label Color Palette
+    --Label-Normal: var(--Netural-5);
+    --Label-Strong: var(--Common-100);
+    --Label-Neutral: var(--Netural-25);
+    --Label-Alternate: var(--Netural-40);
+    --Label-Assistive: var(--Netural-50);
+    --Label-Disabled: var(--Netural-97);
+  
+    // Line Color Palette
+    --Line-Normal: var(--Netural-90);
+    --Line-Neutral: var(--Netural-95);
+    --Line-Alternate: var(--Netural-97);
+  
+    // Fill Color Palette
+    --Fill-Assistive: var(--Common-00);
+    --Fill-Support: var(--Common-00);
+    --Fill-Normal: var(--Netural-97);
+    --Fill-Neutral: var(--Netural-95);
+    --Fill-Alternate: var(--Netural-90);
+  
+    // Normal Color Palette
+    --Normal-Normal: var(--Common-00);
+    --Normal-Alternate: var(--Netural-99);
+    --Normal-Neutral: var(--Netural-95);
+  
+    // Static Colors
+    --Static-Black: var(--Common-100);
+    --Static-White: var(--Common-00);
+  }
