--- a/src/components/auth/loginForm/style.scss
+++ b/src/components/auth/loginForm/style.scss
@@ -83,7 +83,7 @@ html, body {
             }
 
             .login-button {
-                width: 98%;
+                width: 97%;
                 height: 50px;
                 background-color: var(--Primary-Normal);
                 color: white;
@@ -93,6 +93,12 @@ html, body {
                 margin-top: 5px;
                 font-weight: 600;
                 font-size: 16px;
+                transition: background-color 0.1s ease;
+            }
+
+            .login-button:hover {
+                background-color: var(--Blue-10);
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             }
 
             .oauth-button {
@@ -111,11 +117,11 @@ html, body {
                     border-radius: 12px;
                     background: white;
                     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-                    transition: opacity 0.3s, box-shadow 0.3s;
+                    transition: opacity 0.3s ease, box-shadow 0.3s ease;
 
                     &:hover {
-                        opacity: 0.85;
-                        box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
+                        opacity: 0.9;
+                        box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
                     }
                 }
             }
@@ -127,9 +133,9 @@ html, body {
 
                 span {
                     cursor: pointer;
-                    color: var(--Primary-Normal);
+                    color: #1E2A47;
                     font-weight: bold;
-                    transition: color 0.3s;
+                    transition: color 0.3s ease;
                 }
             }
         }
