--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,4 @@
-@import './color/palette.scss';
-@import './effect/effect.scss';
-@import './shape/shape.scss';
-@import './typography/typography.scss';
-@import './mixin.scss';
+@use "./styles/color/palette";
+@use "./styles/effect/effect";
+@use "./styles/shape/shape";
+@use "./styles/typography/typography";
