--- a/src/styles/effect/effect.scss
+++ b/src/styles/effect/effect.scss
@@ -1,5 +1,5 @@
 :root {
-  --black-shadow-1: rgba(0, 0, 0, 0.02) 0 3px 10px 0.1 3;
-  --black-shadow-2: rgba(0, 0, 0, 0.04) 0 4px 12px 0.12 4;
-  --black-shadow-3: rgba(0, 0, 0, 0.06) 0 6px 18px 0.15 6;
+  --black-shadow-1: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  --black-shadow-2: 0px 6px 10px rgba(0, 0, 0, 0.15);
+  --black-shadow-3: 0px 8px 12px rgba(0, 0, 0, 0.2);
 }
