feat: 수정 사항 반영

--- a/src/components/common/button/style.scss
+++ b/src/components/common/button/style.scss
@@ -1,14 +1,14 @@
-.login-button {
-    width: 310px;
-    height: 45px;
+.button {
+    width: 320px;
+    height: 49px;
     padding: 5px;
     border: none;
-    border-radius: 12px;
+    border-radius: 14px;
     font-size: 16px;
     font-weight: 500;
     background-color: var(--Primary-Normal);
     color: var(--Fill-Assistive);
-    transition: background-color 0.2s ease;
+    transition: background-color 0.1s ease;
 
     &:hover {
         background-color: var(--Blue-10);
