--- a/src/components/common/button/style.scss
+++ b/src/components/common/button/style.scss
@@ -1,14 +1,12 @@
-.button {
-    width: 320px;
-    height: 49px;
-    padding: 5px;
-    border: none;
+.button-container {
+    width: 330px;
+    height: 50px;
     border-radius: 14px;
+    border: none;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
+    color: var(--Common-00);
     background-color: var(--Primary-Normal);
-    color: var(--Fill-Assistive);
-    transition: background-color 0.1s ease;
 
     &:hover {
         background-color: var(--Blue-10);
