--- a/src/pages/login/style.scss
+++ b/src/pages/login/style.scss
@@ -2,73 +2,79 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+  
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+  
     background-color: #E4E4E5;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
 }
-
+  
 .login-container {
-    width: 800px;
+    width: 960px;
+    min-height: 620px;
     display: flex;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     background-color: var(--Common-00);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
-
+  
 .login-banner {
     flex: 1.1;
     display: flex;
-    align-items: center;
     justify-content: center;
-    
+    align-items: center;
+  
     img {
-        width: 100%;
-        border-top-left-radius: 12px;
-        border-bottom-left-radius: 12px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-top-left-radius: 12px;
+      border-bottom-left-radius: 12px;
     }
 }
-
-.logo-container {
-    margin-left: -10px;
-}
-
-.login-form {
+  
+  .login-form {
     flex: 0.9;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+  
     padding: 20px;
     margin-left: 4px;
-
+  
+    .logo-container {
+      margin-left: -10px;
+    }
+  
     .login-form-body {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-left: 30px;
     }
-
-    .login-input-group {
-        width: 100%;
-    }
-
+  
+    .login-input-group,
     .login-submit-button {
-        width: 100%;
+      width: 100%;
     }
-
+  
     .signup-redirect {
+      margin-top: 40px;
+      margin-left: -23px;
+      font-size: 14px;
+  
+      span {
         font-size: 14px;
-
-        span {
-            color: var(--Blue-20);
-            font-weight: 800;
-            font-size: 14px;
-            cursor: pointer;
-        }
+        font-weight: 800;
+        color: var(--Blue-20);
+        cursor: pointer;
+      }
     }
-}
+  }
