--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -6,74 +6,80 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #E4E4E5;
     width: 100vw;
     margin: 0;
     padding: 0;
-}
-
-.signup-logo {
+    background-color: #E4E4E5;
+  }
+  
+  .signup-logo {
     margin-bottom: 30px;
     margin-left: -10px;
-}
-
-.signup-container {
-    width: 800px;
+  }
+  
+  .signup-container {
+    width: 960px; // 로그인과 동일하게 맞춤
+    min-height: 620px;
     display: flex;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     background-color: var(--Common-00);
-}
-
-.signup-banner {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .signup-banner {
     flex: 1.1;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+  
     img {
-        width: 100%;
-        border-top-left-radius: 12px;
-        border-bottom-left-radius: 12px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-top-left-radius: 12px;
+      border-bottom-left-radius: 12px;
     }
-}
-
-.logo-container {
+  }
+  
+  .logo-container {
     margin-bottom: 30px;
     margin-left: -10px;
-}
-
-.signup-form {
+  }
+  
+  .signup-form {
     flex: 0.9;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 20px;
-
+  
     .signup-form-body {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-left: 30px;
     }
-
+  
     .signup-input-group {
-        width: 100%;
+      width: 100%;
     }
-
+  
     .signup-submit-button {
-        width: 100%;
+      width: 100%;
     }
-
+  
     .login-redirect {
+      font-size: 14px;
+      margin-top: 40px;
+  
+      span {
+        color: var(--Blue-20);
+        font-weight: 800;
         font-size: 14px;
-
-        span {
-            color: var(--Blue-20);
-            font-weight: 800;
-            font-size: 14px;
-            cursor: pointer;
-        }
+        cursor: pointer;
+      }
     }
-}
+  }
