--- a/src/components/common/button/style.scss
+++ b/src/components/common/button/style.scss
@@ -1,12 +1,10 @@
-.button-container {
-    width: 330px;
-    height: 50px;
-    border-radius: 14px;
+.button-component {
+    border-radius: 12px;
     border: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: var(--Common-00);
     background-color: var(--Primary-Normal);
+    color: var(--Common-00);
+    font-size: 16px;
+    font-weight: bold;
 
     &:hover {
         background-color: var(--Blue-10);
