--- a/src/pages/login/style.scss
+++ b/src/pages/login/style.scss
@@ -1,80 +1,80 @@
 .login-page {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    background-color: #E4E4E5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #E4E4E5;
 }
-  
+
 .login-container {
-    width: 960px;
-    min-height: 620px;
-    display: flex;
-    border-radius: 12px;
-    background-color: var(--Common-00);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 850px;
+  min-height: 600px;
+
+  display: flex;
+  border-radius: 12px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
-  
+
 .login-banner {
-    flex: 1.1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-top-left-radius: 12px;
-      border-bottom-left-radius: 12px;
-    }
+  flex: 1.1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+  }
 }
-  
-  .login-form {
-    flex: 0.9;
+
+.login-form {
+  flex: 0.9;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  padding: 20px;
+  margin-left: 4px;
+
+  .logo-container {
+    margin-top: -10px;
+    margin-left: -10px;
+  }
+
+  .login-form-body {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-  
-    padding: 20px;
-    margin-left: 4px;
-  
-    .logo-container {
-      margin-left: -10px;
-    }
-  
-    .login-form-body {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-left: 30px;
-    }
-  
-    .login-input-group,
-    .login-submit-button {
-      width: 100%;
-    }
-  
-    .signup-redirect {
-      margin-top: 40px;
-      margin-left: -23px;
-      font-size: 14px;
-  
-      span {
-        font-size: 14px;
-        font-weight: 800;
-        color: var(--Blue-20);
-        cursor: pointer;
-      }
+    margin-left: 30px;
+  }
+
+  .login-input-group,
+  .login-submit-button {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .signup-redirect {
+    margin-top: 40px;
+    margin-left: -23px;
+    font-size: 14px;
+
+    span {
+      font-weight: 800;
+      color: #385C7A;
+      cursor: pointer;
     }
   }
+}
