--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -18,8 +18,8 @@
   }
   
   .signup-container {
-    width: 960px; // 로그인과 동일하게 맞춤
-    min-height: 620px;
+    width: 850px;
+    min-height: 600px;
     display: flex;
     border-radius: 12px;
     background-color: var(--Common-00);
