--- a/src/components/common/button/style.scss
+++ b/src/components/common/button/style.scss
@@ -5,8 +5,11 @@
     color: var(--Common-00);
     font-size: 16px;
     font-weight: bold;
+    width: 100%;
+    height: 50px;
 
     &:hover {
         background-color: var(--Blue-10);
+        cursor: pointer;
     }
 }
