--- a/src/components/common/textField/style.scss
+++ b/src/components/common/textField/style.scss
@@ -1,7 +1,8 @@
 .text-field {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 10px;
+    width: 100%;
   
     .text-field-label {
       font-size: 15px;
@@ -11,9 +12,9 @@
     .text-field-input {
       width: 100%;
       height: 50px;
-      padding: 0 20px;
       border: none;
       border-radius: 12px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+      padding: 0 5px;
     }
 }
