--- a/src/pages/login/style.scss
+++ b/src/pages/login/style.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #E4E4E5;
+  background-color: #e4e4e5;
 }
 
 .login-container {
@@ -45,10 +45,10 @@
   align-items: center;
 
   padding: 20px;
-  margin-left: 4px;
+
+  gap: 30px;
 
   .logo-container {
-    margin-top: -10px;
     margin-left: -10px;
   }
 
@@ -57,23 +57,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 30px;
+
   }
 
-  .login-input-group,
+  .login-input-group {
+    width: 100%;
+    gap: 30px;
+  }
+
   .login-submit-button {
     width: 100%;
-    margin-top: 20px;
   }
 
   .signup-redirect {
-    margin-top: 40px;
-    margin-left: -23px;
     font-size: 14px;
 
     span {
       font-weight: 800;
-      color: #385C7A;
+      color: #385c7a;
       cursor: pointer;
     }
   }
