--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -1,85 +1,74 @@
 .signup-page {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    background-color: #E4E4E5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  background-color: #e4e4e5;
+}
+
+.signup-logo {
+  margin-left: -10px;
+}
+
+.signup-container {
+  width: 850px;
+  min-height: 600px;
+  display: flex;
+  border-radius: 12px;
+  background-color: var(--Common-00);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.signup-banner {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
   }
-  
-  .signup-logo {
-    margin-bottom: 30px;
-    margin-left: -10px;
+}
+
+.logo-container {
+  margin-left: -10px;
+}
+
+.signup-form {
+  flex: 0.9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  gap: 30px;
+
+  .signup-input-group {
+    width: 100%;
   }
-  
-  .signup-container {
-    width: 850px;
-    min-height: 600px;
-    display: flex;
-    border-radius: 12px;
-    background-color: var(--Common-00);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
+  .signup-button-group {
+    width: 100%;
   }
-  
-  .signup-banner {
-    flex: 1.1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-top-left-radius: 12px;
-      border-bottom-left-radius: 12px;
-    }
-  }
-  
-  .logo-container {
-    margin-bottom: 30px;
-    margin-left: -10px;
-  }
-  
-  .signup-form {
-    flex: 0.9;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-  
-    .signup-form-body {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-left: 30px;
-    }
-  
-    .signup-input-group {
-      width: 100%;
-    }
-  
-    .signup-submit-button {
-      width: 100%;
-    }
-  
-    .login-redirect {
+
+  .login-redirect {
+    font-size: 14px;
+
+    span {
+      color: var(--Blue-20);
+      font-weight: 800;
       font-size: 14px;
-      margin-top: 40px;
-  
-      span {
-        color: var(--Blue-20);
-        font-weight: 800;
-        font-size: 14px;
-        cursor: pointer;
-      }
+      cursor: pointer;
     }
   }
+}
