--- a/src/components/signup/step3/style.scss
+++ b/src/components/signup/step3/style.scss
@@ -24,14 +24,16 @@
 
   .signup-select {
     width: 100%;
-    height: 48px;
+    height: 50px;
     padding: 0 14px;
     border-radius: 12px;
-    border: 1px solid #ddd;
+    border: none;
     background-color: #fff;
     font-size: 14px;
     color: #333;
     appearance: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+    padding: 0 5px;
 
     &:focus {
       border-color: var(--Primary-Normal);
