--- a/src/components/common/progressbar/style.scss
+++ b/src/components/common/progressbar/style.scss
@@ -1,14 +1,8 @@
-.progressbar-wrapper {
-  width: 100%;
-  padding: 0 40px;
-  margin: 20px 0;
-}
-
 .progressbar-track {
   width: 100%;
-  height: 6px;
-  background-color: #e0e0e0;
-  border-radius: 4px;
+  height: 10px;
+  background-color: var(--Netural-90);
+  border-radius: var(--extra-large);
   overflow: hidden;
 }
 
