--- a/src/styles/color/semantic.scss
+++ b/src/styles/color/semantic.scss
@@ -15,6 +15,10 @@
     --Label-Alternate: var(--Netural-40);
     --Label-Assistive: var(--Netural-50);
     --Label-Disabled: var(--Netural-97);
+
+    --Backgroud-Normal: var(--Common-00);
+    --Backgroud-Alternate: var(--Neutral-99);
+    --Backgroud-Neutral: var(--Neutral-95);
   
     --Line-Normal: var(--Netural-90);
     --Line-Neutral: var(--Netural-95);
