fix :: progressbar 계산 수정

--- a/src/components/common/progressbar/style.scss
+++ b/src/components/common/progressbar/style.scss
@@ -10,4 +10,5 @@
   height: 100%;
   background-color: var(--Primary-Normal);
   transition: width 0.3s ease;
+  border-radius: var(--extra-large);
 }
