--- a/src/components/ui/select/style.module.scss
+++ b/src/components/ui/select/style.module.scss
@@ -1,16 +1,17 @@
-.formGroup {
-  display: flex;
-  flex-direction: column;
+@use "@/styles/function/function" as *;
+
+.selectGroup {
+  @include flex-column;
   gap: 8px;
 }
 
-.formLabel {
+.selectLabel {
   font-size: 15px;
   font-weight: 600;
   color: #333;
 }
 
-.signupSelect {
+.select {
   width: 100%;
   height: 50px;
   padding: 0 14px;
@@ -21,16 +22,10 @@
   color: #333;
   appearance: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
-  padding: 0 5px;
 
   &:focus {
     border-color: var(--Primary-Normal);
     outline: none;
     box-shadow: 0 0 0 3px rgba(0, 112, 243, 0.1);
   }
-}
-
-option,
-optgroup {
-  font-size: 14px;
 }
