--- a/src/pages/login/style.scss
+++ b/src/pages/login/style.scss
@@ -34,6 +34,7 @@
 
   .auth-input-group {
     @include flex-column;
+    gap: 10px;
     width: 100%;
     min-width: 340px;
   }
@@ -46,6 +47,7 @@
     span:nth-child(2) {
       @include label-bold;
       color: var(--Primary-Alternate);
+      cursor: pointer;
     }
   }
 }
