--- a/src/styles/color/semantic.scss
+++ b/src/styles/color/semantic.scss
@@ -2,7 +2,7 @@
 
 :root {
     --Primary-Normal: var(--Blue-20);
-    --Primary-Alternate: #385C7A;
+    --Primary-Alternative: #385C7A;
     --Primary-Assistive: #61778A;
   
     --Secondary-Normal: #BFC1C1;
