--- a/src/styles/color/semantic.scss
+++ b/src/styles/color/semantic.scss
@@ -17,8 +17,8 @@
     --Label-Disabled: var(--Netural-97);
 
     --Backgroud-Normal: var(--Common-00);
-    --Backgroud-Alternate: var(--Neutral-99);
-    --Backgroud-Neutral: var(--Neutral-95);
+    --Backgroud-Alternate: var(--Netural-99);
+    --Backgroud-Neutral: var(--Netural-95);
   
     --Line-Normal: var(--Netural-90);
     --Line-Neutral: var(--Netural-95);
